--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Facial Emotion Recognition in Media Consumption
+title: Emotion Recognition in Media Consumption
 description: A group project undertaken as part of my MSc Robotics & Computation course at UCL.
